--- a/src/Components/TweetInfo/TweetInfo.module.scss
+++ b/src/Components/TweetInfo/TweetInfo.module.scss
@@ -32,6 +32,8 @@
   font-size: 24px;
   line-height: 36px;
   font-weight: 400;
+  /*內容太長要換行*/
+  word-break: break-all;
 }
 .tweet-update-detail {
   padding: 8px 0;
